# KeyScroll

./: .gitignore  Cargo.toml  README.md  compile-ahk.bat
docs/: dev-plan.md
src/: config.rs  log.rs  main.rs
src-ahk/: keyscroll.ahk
tests/: integration.rs
